--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+$body-color: #fff;
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 html,
@@ -5,4 +7,6 @@ body {
   height: 100%;
   width: 100%;
   font-family: 'Open Sans';
+  background: black;
+  color: $body-color;
 }
