--- a/src/sass/tools/_colors.sass
+++ b/src/sass/tools/_colors.sass
@@ -2,6 +2,8 @@
 
 // -- Basic Default Reserved Colors -------------------------------------------------------------
 
+$brand-color:        #2ba4a0 !important
+
 $brand-success:      #4caf50 !default
 $brand-info:         #2196f3 !default
 $brand-warning:      #ff9800 !default
