--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,20 +1,3 @@
 @import 'tools/fonts';
 @import 'tools/colors';
-
-$background-color: #ffffff;
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
-
-.app {
-  background: $brand-success;
-  min-height: 100vh;
-  flex-direction: column;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  font-family: 'OpenSans-Regular', Fallback, sans-serif;
-}
+@import 'layout/app';
