--- a/src/sass/tools/_fonts.scss
+++ b/src/sass/tools/_fonts.scss
@@ -1,40 +1,1 @@
-@font-face {
-  font-family: 'OpenSans-Bold';
-  src: url('../assets/fonts/OpenSans/OpenSans-Bold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-BoldItalic';
-  src: url('../assets/fonts/OpenSans/OpenSans-BoldItalic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-ExtraBold';
-  src: url('../assets/fonts/OpenSans/OpenSans-ExtraBold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-ExtraBoldItalic';
-  src: url('../assets/fonts/OpenSans/OpenSans-ExtraBoldItalic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-Italic';
-  src: url('../assets/fonts/OpenSans/OpenSans-Italic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-Light';
-  src: url('../assets/fonts/OpenSans/OpenSans-Light.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-LightItalic';
-  src: url('../assets/fonts/OpenSans/OpenSans-LightItalic.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-Regular';
-  src: url('../assets/fonts/OpenSans/OpenSans-Regular.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-SemiBold';
-  src: url('../assets/fonts/OpenSans/OpenSans-SemiBold.ttf') format('truetype');
-}
-@font-face {
-  font-family: 'OpenSans-SemiBoldItalic';
-  src: url('../assets/fonts/OpenSans/OpenSans-SemiBoldItalic.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
