--- a/src/sass/tools/_colors.sass
+++ b/src/sass/tools/_colors.sass
@@ -9,3 +9,4 @@ $brand-info:         #2196f3 !default
 $brand-warning:      #ff9800 !default
 $brand-danger:       #f44336 !default
 $brand-lock:         #f1c40f !default
+$background-color:   #ffffff
