--- a/src/sass/tools/_fonts.scss
+++ b/src/sass/tools/_fonts.scss
@@ -1,1 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
+// Title Font
+$font-title: 'Lato', sans-serif;
+
+// Info Font
+$font-info: 'Open Sans', sans-serif;
